--- a/app/views/coupons/index.html.erb
+++ b/app/views/coupons/index.html.erb
@@ -1,4 +1,5 @@
 <div>
+  <div><a href="/coupons/1">FREESTUFF</a></div>
   <% @coupons.each do |coupon| %>
     <div><%= link_to coupon.to_s, coupons_path(coupon) %> , <%= coupon.store %></div>
   <% end %>
